update for serverside build, using `es-build` and `esbuild-gas-plugin`

--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
-    "push": "cp -r server/* dist && clasp push && rm -rf dist/*",
+    "build": "tsc && vite build && node build.cjs",
+    "push": "cp appsscript.json dist && clasp push && rm -rf dist/*",
     "pull": "clasp pull",
     "open": "clasp open",
     "preview": "vite preview",
@@ -35,6 +35,8 @@
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@vitejs/plugin-react": "^3.1.0",
     "clasp": "^1.0.0",
+    "esbuild": "^0.17.6",
+    "esbuild-gas-plugin": "^0.5.0",
     "eslint": "^8.0.1",
     "eslint-config-prettier": "^8.6.0",
     "eslint-config-standard-with-typescript": "^34.0.0",
