--- a/package.json
+++ b/package.json
@@ -23,10 +23,13 @@
     "@chakra-ui/react": "^2.6.1",
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
+    "@typescript-eslint/parser": "^5.59.8",
     "framer-motion": "^10.12.16",
     "gas-client": "^1.1.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "rollup": "^3.23.0",
+    "stylelint-config-recommended": "^12.0.0"
   },
   "devDependencies": {
     "@types/eslint": "^8.21.0",
@@ -39,13 +42,13 @@
     "clasp": "^1.0.0",
     "esbuild": "^0.17.6",
     "esbuild-gas-plugin": "^0.5.0",
-    "eslint": "^8.0.1",
+    "eslint": "^8.41.0",
     "eslint-config-prettier": "^8.6.0",
     "eslint-config-standard-with-typescript": "^34.0.0",
     "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-jest": "^27.2.1",
     "eslint-plugin-jsx-a11y": "^6.7.1",
-    "eslint-plugin-n": "^15.0.0",
+    "eslint-plugin-n": "^16.0.0",
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
@@ -53,9 +56,9 @@
     "lint-staged": "^13.1.0",
     "prettier": "^2.8.3",
     "simple-git-hooks": "^2.8.1",
-    "stylelint": "^14.16.1",
-    "stylelint-config-recess-order": "^3.1.0",
-    "stylelint-config-standard": "^29.0.0",
+    "stylelint": "^15.6.2",
+    "stylelint-config-recess-order": "^4.0.0",
+    "stylelint-config-standard": "^33.0.0",
     "stylelint-order": "^6.0.1",
     "typescript": "*",
     "vite": "^4.1.0",
