--- a/package.json
+++ b/package.json
@@ -20,33 +20,33 @@
     "prepare": "npx simple-git-hooks || :"
   },
   "dependencies": {
-    "@chakra-ui/react": "^2.6.1",
-    "@emotion/react": "^11.11.0",
+    "@chakra-ui/react": "^2.7.1",
+    "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
-    "@typescript-eslint/parser": "^5.59.8",
-    "framer-motion": "^10.12.16",
+    "@typescript-eslint/parser": "^5.60.0",
+    "framer-motion": "^10.12.17",
     "gas-client": "^1.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "rollup": "^3.23.0",
+    "rollup": "^3.25.1",
     "stylelint-config-recommended": "^12.0.0"
   },
   "devDependencies": {
-    "@types/eslint": "^8.21.0",
+    "@types/eslint": "^8.40.2",
     "@types/google-apps-script": "^1.0.57",
-    "@types/prettier": "^2.7.2",
-    "@types/react": "^18.0.27",
-    "@types/react-dom": "^18.0.10",
-    "@typescript-eslint/eslint-plugin": "^5.0.0",
-    "@vitejs/plugin-react": "^4.0.0",
+    "@types/prettier": "^2.7.3",
+    "@types/react": "^18.2.14",
+    "@types/react-dom": "^18.2.6",
+    "@typescript-eslint/eslint-plugin": "^5.60.0",
+    "@vitejs/plugin-react": "^4.0.1",
     "clasp": "^1.0.0",
-    "esbuild": "^0.17.6",
-    "esbuild-gas-plugin": "^0.5.0",
-    "eslint": "^8.41.0",
+    "esbuild": "^0.18.6",
+    "esbuild-gas-plugin": "^0.6.0",
+    "eslint": "^8.43.0",
     "eslint-config-prettier": "^8.6.0",
-    "eslint-config-standard-with-typescript": "^34.0.0",
+    "eslint-config-standard-with-typescript": "^35.0.0",
     "eslint-plugin-import": "^2.25.2",
-    "eslint-plugin-jest": "^27.2.1",
+    "eslint-plugin-jest": "^27.2.2",
     "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-n": "^16.0.0",
     "eslint-plugin-promise": "^6.0.0",
@@ -56,11 +56,11 @@
     "lint-staged": "^13.1.0",
     "prettier": "^2.8.3",
     "simple-git-hooks": "^2.8.1",
-    "stylelint": "^15.6.2",
-    "stylelint-config-recess-order": "^4.0.0",
+    "stylelint": "^15.9.0",
+    "stylelint-config-recess-order": "^4.2.0",
     "stylelint-config-standard": "^33.0.0",
     "stylelint-order": "^6.0.1",
-    "typescript": "*",
+    "typescript": "5.1.3",
     "vite": "^4.1.0",
     "vite-plugin-singlefile": "^0.13.2",
     "vite-tsconfig-paths": "^4.0.5"
