--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "dev": "vite",
     "build": "tsc && vite build & npm run build:menu && node build.cjs",
     "push": "cp appsscript.json dist && clasp push && rm -rf dist/*",
-    "build:menu???????": "tsc && vite build --emptyOutDir --config vite.config.menu.ts && mv dist_menu/server/Menu/menu.html dist/ && rm -rf dist_menu",
     "build:menu": "tsc && vite build --emptyOutDir --config vite.config.menu.ts && find dist_menu -type f -name '*.html' -exec mv {} dist/ \\; && rm -rf dist_menu",
     "preview": "vite preview",
     "lint:es": "eslint 'src/**/*.{js,jsx,ts,tsx}'",
@@ -19,7 +18,9 @@
     "format": "prettier --write --loglevel=warn 'src/**/*.{js,jsx,ts,tsx,html,json,gql,graphql}'",
     "fix": "npm run --silent format; npm run --silent lint:fix",
     "preinstall": "npx typesync || :",
-    "prepare": "npx simple-git-hooks || :"
+    "prepare": "npx simple-git-hooks || :",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "dependencies": {
     "@chakra-ui/react": "^2.7.1",
@@ -30,12 +31,25 @@
     "gas-client": "^1.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-spinners": "^0.13.8",
     "rollup": "^3.25.1",
     "stylelint-config-recommended": "^12.0.0"
   },
   "devDependencies": {
+    "@chakra-ui/storybook-addon": "^5.0.1",
+    "@storybook/addon-essentials": "^7.1.0",
+    "@storybook/addon-interactions": "^7.1.0",
+    "@storybook/addon-links": "^7.1.0",
+    "@storybook/addon-onboarding": "^1.0.8",
+    "@storybook/blocks": "^7.1.0",
+    "@storybook/builder-vite": "^7.1.0",
+    "@storybook/react": "^7.1.0",
+    "@storybook/react-vite": "^7.1.0",
+    "@storybook/testing-library": "^0.2.0",
     "@types/eslint": "^8.40.2",
+    "@types/eslint-config-prettier": "^6.11.0",
     "@types/google-apps-script": "^1.0.57",
+    "@types/lint-staged": "^13.2.0",
     "@types/prettier": "^2.7.3",
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
@@ -54,10 +68,12 @@
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-storybook": "^0.6.13",
     "jest": "^29.4.1",
     "lint-staged": "^13.1.0",
     "prettier": "^2.8.3",
     "simple-git-hooks": "^2.8.1",
+    "storybook": "^7.1.0",
     "stylelint": "^15.9.0",
     "stylelint-config-recess-order": "^4.2.0",
     "stylelint-config-standard": "^33.0.0",
@@ -81,5 +97,6 @@
   },
   "simple-git-hooks": {
     "pre-commit": ". ./lint-staged-each.sh"
-  }
+  },
+  "packageManager": "yarn@3.6.1"
 }
