--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -3,7 +3,8 @@
 {
 	"name": "Node.js & TypeScript",
 	// Or use a Dockerfile or Docker Compose file. More info: https://containers.dev/guide/dockerfile
-	"image": "mcr.microsoft.com/devcontainers/typescript-node:0-18",
+	"image": "mcr.microsoft.com/devcontainers/typescript-node:1-20-bullseye",
+
 	"customizations": {
 		"vscode": {
 			"extensions": [
@@ -21,6 +22,10 @@
 				"johnpapa.vscode-peacock"
 			]
 		}
+	},
+	"features": {
+		"ghcr.io/devcontainers-contrib/features/pnpm:2": {},
+		"ghcr.io/shyim/devcontainers-features/bun:0": {}
 	},
 
 	// Features to add to the dev container. More info: https://containers.dev/features.
