--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build & npm run build:menu && node build.cjs",
+    "build": "tsc && vite build & pnpm run build:menu && node build.cjs",
     "push": "cp appsscript.json dist && clasp push && rm -rf dist/*",
     "build:menu": "tsc && vite build --emptyOutDir --config vite.config.menu.ts && find dist_menu -type f -name '*.html' -exec mv {} dist/ \\; && rm -rf dist_menu",
     "preview": "vite preview",
@@ -13,75 +13,75 @@
     "lint:es:fix": "eslint --fix 'src/**/*.{js,jsx,ts,tsx}'",
     "lint:style": "stylelint 'src/**/*.{css,less,sass,scss}'",
     "lint:style:fix": "stylelint --fix 'src/**/*.{css,less,sass,scss}'",
-    "lint": "npm run --silent lint:style; npm run --silent lint:es",
-    "lint:fix": "npm run --silent lint:style:fix; npm run --silent lint:es:fix",
+    "lint": "pnpm run --silent lint:style; pnpm run --silent lint:es",
+    "lint:fix": "pnpm run --silent lint:style:fix; pnpm run --silent lint:es:fix",
     "format": "prettier --write --loglevel=warn 'src/**/*.{js,jsx,ts,tsx,html,json,gql,graphql}'",
-    "fix": "npm run --silent format; npm run --silent lint:fix",
-    "preinstall": "npx typesync || :",
+    "fix": "pnpm run --silent format; pnpm run --silent lint:fix",
+    "preinstall": "npx only-allow pnpm; npx typesync || :",
     "prepare": "npx simple-git-hooks || :",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build"
   },
   "dependencies": {
-    "@chakra-ui/react": "^2.7.1",
+    "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
-    "@typescript-eslint/parser": "^5.60.0",
-    "framer-motion": "^10.12.17",
+    "@typescript-eslint/parser": "^5.62.0",
+    "framer-motion": "^10.16.5",
     "gas-client": "^1.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-spinners": "^0.13.8",
-    "rollup": "^3.25.1",
+    "rollup": "^3.29.4",
     "stylelint-config-recommended": "^12.0.0"
   },
   "devDependencies": {
-    "@chakra-ui/storybook-addon": "^5.0.1",
-    "@storybook/addon-essentials": "^7.1.0",
-    "@storybook/addon-interactions": "^7.1.0",
-    "@storybook/addon-links": "^7.1.0",
+    "@chakra-ui/storybook-addon": "^5.1.0",
+    "@storybook/addon-essentials": "^7.5.3",
+    "@storybook/addon-interactions": "^7.5.3",
+    "@storybook/addon-links": "^7.5.3",
     "@storybook/addon-onboarding": "^1.0.8",
-    "@storybook/blocks": "^7.1.0",
-    "@storybook/builder-vite": "^7.1.0",
-    "@storybook/react": "^7.1.0",
-    "@storybook/react-vite": "^7.1.0",
-    "@storybook/testing-library": "^0.2.0",
-    "@types/eslint": "^8.40.2",
-    "@types/eslint-config-prettier": "^6.11.0",
-    "@types/google-apps-script": "^1.0.57",
-    "@types/lint-staged": "^13.2.0",
+    "@storybook/blocks": "^7.5.3",
+    "@storybook/builder-vite": "^7.5.3",
+    "@storybook/react": "^7.5.3",
+    "@storybook/react-vite": "^7.5.3",
+    "@storybook/testing-library": "^0.2.2",
+    "@types/eslint": "^8.44.7",
+    "@types/eslint-config-prettier": "^6.11.3",
+    "@types/google-apps-script": "^1.0.78",
+    "@types/lint-staged": "^13.2.2",
     "@types/prettier": "^2.7.3",
-    "@types/react": "^18.2.14",
-    "@types/react-dom": "^18.2.6",
-    "@typescript-eslint/eslint-plugin": "^5.60.0",
-    "@vitejs/plugin-react": "^4.0.1",
+    "@types/react": "^18.2.38",
+    "@types/react-dom": "^18.2.16",
+    "@typescript-eslint/eslint-plugin": "^5.62.0",
+    "@vitejs/plugin-react": "^4.2.0",
     "clasp": "^1.0.0",
-    "esbuild": "^0.18.6",
+    "esbuild": "^0.18.20",
     "esbuild-gas-plugin": "^0.6.0",
-    "eslint": "^8.43.0",
-    "eslint-config-prettier": "^8.6.0",
+    "eslint": "^8.54.0",
+    "eslint-config-prettier": "^8.10.0",
     "eslint-config-standard-with-typescript": "^35.0.0",
-    "eslint-plugin-import": "^2.25.2",
-    "eslint-plugin-jest": "^27.2.2",
-    "eslint-plugin-jsx-a11y": "^6.7.1",
-    "eslint-plugin-n": "^16.0.0",
-    "eslint-plugin-promise": "^6.0.0",
-    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-import": "^2.29.0",
+    "eslint-plugin-jest": "^27.6.0",
+    "eslint-plugin-jsx-a11y": "^6.8.0",
+    "eslint-plugin-n": "^16.3.1",
+    "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-storybook": "^0.6.13",
-    "jest": "^29.4.1",
-    "lint-staged": "^13.1.0",
-    "prettier": "^2.8.3",
-    "simple-git-hooks": "^2.8.1",
-    "storybook": "^7.1.0",
-    "stylelint": "^15.9.0",
-    "stylelint-config-recess-order": "^4.2.0",
+    "eslint-plugin-storybook": "^0.6.15",
+    "jest": "^29.7.0",
+    "lint-staged": "^13.3.0",
+    "prettier": "^2.8.8",
+    "simple-git-hooks": "^2.9.0",
+    "storybook": "^7.5.3",
+    "stylelint": "^15.11.0",
+    "stylelint-config-recess-order": "^4.4.0",
     "stylelint-config-standard": "^33.0.0",
-    "stylelint-order": "^6.0.1",
+    "stylelint-order": "^6.0.3",
     "typescript": "5.1.3",
-    "vite": "^4.1.0",
-    "vite-plugin-singlefile": "^0.13.2",
-    "vite-tsconfig-paths": "^4.0.5"
+    "vite": "^4.5.0",
+    "vite-plugin-singlefile": "^0.13.5",
+    "vite-tsconfig-paths": "^4.2.1"
   },
   "lint-staged": {
     "src/**/*.{js,jsx,ts,tsx}": [
@@ -98,5 +98,10 @@
   "simple-git-hooks": {
     "pre-commit": ". ./lint-staged-each.sh"
   },
-  "packageManager": "yarn@3.6.1"
+  "packageManager": "pnpm@8.7.5",
+  "engines": {
+    "npm": "use pnpm please!",
+    "yarn": "use pnpm please!",
+    "pnpm": ">=8.7.5"
+  }
 }
