--- a/package.json
+++ b/package.json
@@ -4,104 +4,58 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --host",
+    "format": "bunx @biomejs/biome format ./src --write",
     "build": "tsc && vite build & pnpm run build:menu && node build.cjs",
     "push": "cp appsscript.json dist && clasp push && rm -rf dist/*",
     "build:menu": "tsc && vite build --emptyOutDir --config vite.config.menu.ts && find dist_menu -type f -name '*.html' -exec mv {} dist/ \\; && rm -rf dist_menu",
     "preview": "vite preview",
-    "lint:es": "eslint 'src/**/*.{js,jsx,ts,tsx}'",
-    "lint:es:fix": "eslint --fix 'src/**/*.{js,jsx,ts,tsx}'",
-    "lint:style": "stylelint 'src/**/*.{css,less,sass,scss}'",
-    "lint:style:fix": "stylelint --fix 'src/**/*.{css,less,sass,scss}'",
-    "lint": "pnpm run --silent lint:style; pnpm run --silent lint:es",
-    "lint:fix": "pnpm run --silent lint:style:fix; pnpm run --silent lint:es:fix",
-    "format": "prettier --write --loglevel=warn 'src/**/*.{js,jsx,ts,tsx,html,json,gql,graphql}'",
-    "fix": "pnpm run --silent format; pnpm run --silent lint:fix",
     "preinstall": "npx only-allow pnpm; npx typesync || :",
-    "prepare": "npx simple-git-hooks || :",
-    "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "prepare": "npx simple-git-hooks || :"
   },
   "dependencies": {
     "@chakra-ui/react": "^2.8.2",
-    "@emotion/react": "^11.11.1",
-    "@emotion/styled": "^11.11.0",
-    "@typescript-eslint/parser": "^5.62.0",
-    "framer-motion": "^10.16.5",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@tanstack/react-query": "^5.37.1",
+    "framer-motion": "^11.2.5",
     "gas-client": "^1.1.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-error-boundary": "^4.0.13",
     "react-spinners": "^0.13.8",
-    "rollup": "^3.29.4",
-    "stylelint-config-recommended": "^12.0.0"
+    "rollup": "^4.17.2",
+    "stylelint-config-recommended": "^14.0.0"
   },
   "devDependencies": {
     "@chakra-ui/storybook-addon": "^5.1.0",
-    "@storybook/addon-essentials": "^7.5.3",
-    "@storybook/addon-interactions": "^7.5.3",
-    "@storybook/addon-links": "^7.5.3",
-    "@storybook/addon-onboarding": "^1.0.8",
-    "@storybook/blocks": "^7.5.3",
-    "@storybook/builder-vite": "^7.5.3",
-    "@storybook/react": "^7.5.3",
-    "@storybook/react-vite": "^7.5.3",
-    "@storybook/testing-library": "^0.2.2",
-    "@types/eslint": "^8.44.7",
-    "@types/eslint-config-prettier": "^6.11.3",
-    "@types/google-apps-script": "^1.0.78",
-    "@types/lint-staged": "^13.2.2",
-    "@types/prettier": "^2.7.3",
-    "@types/react": "^18.2.38",
-    "@types/react-dom": "^18.2.16",
-    "@typescript-eslint/eslint-plugin": "^5.62.0",
-    "@vitejs/plugin-react": "^4.2.0",
+    "@types/google-apps-script": "^1.0.83",
+    "@types/lint-staged": "^13.3.0",
+    "@types/react": "^18.3.2",
+    "@types/react-dom": "^18.3.0",
+    "@vitejs/plugin-react": "^4.2.1",
     "clasp": "^1.0.0",
-    "esbuild": "^0.18.20",
-    "esbuild-gas-plugin": "^0.6.0",
-    "eslint": "^8.54.0",
-    "eslint-config-prettier": "^8.10.0",
-    "eslint-config-standard-with-typescript": "^35.0.0",
-    "eslint-plugin-import": "^2.29.0",
-    "eslint-plugin-jest": "^27.6.0",
-    "eslint-plugin-jsx-a11y": "^6.8.0",
-    "eslint-plugin-n": "^16.3.1",
-    "eslint-plugin-promise": "^6.1.1",
-    "eslint-plugin-react": "^7.33.2",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-storybook": "^0.6.15",
+    "esbuild": "^0.21.3",
+    "esbuild-gas-plugin": "^0.8.0",
     "jest": "^29.7.0",
-    "lint-staged": "^13.3.0",
-    "prettier": "^2.8.8",
-    "simple-git-hooks": "^2.9.0",
-    "storybook": "^7.5.3",
-    "stylelint": "^15.11.0",
-    "stylelint-config-recess-order": "^4.4.0",
-    "stylelint-config-standard": "^33.0.0",
-    "stylelint-order": "^6.0.3",
-    "typescript": "5.1.3",
-    "vite": "^4.5.0",
-    "vite-plugin-singlefile": "^0.13.5",
-    "vite-tsconfig-paths": "^4.2.1"
+    "lint-staged": "^15.2.4",
+    "npm-check-updates": "^16.14.20",
+    "simple-git-hooks": "^2.11.1",
+    "stylelint": "^16.5.0",
+    "stylelint-config-recess-order": "^5.0.1",
+    "stylelint-config-standard": "^36.0.0",
+    "stylelint-order": "^6.0.4",
+    "typescript": "5.4.5",
+    "vite": "^5.2.11",
+    "vite-plugin-singlefile": "^2.0.1",
+    "vite-tsconfig-paths": "^4.3.2"
   },
   "lint-staged": {
-    "src/**/*.{js,jsx,ts,tsx}": [
-      "prettier --write --loglevel=warn",
-      "eslint --fix --quiet"
-    ],
-    "src/**/*.{css,less,sass,scss}": [
-      "stylelint --fix --quiet"
-    ],
-    "src/**/*.{html,json,gql,graphql}": [
-      "prettier --write --loglevel=error"
-    ]
+    "src/**/*.{js,jsx,ts,tsx}": ["prettier --write --loglevel=warn", "eslint --fix --quiet"],
+    "src/**/*.{css,less,sass,scss}": ["stylelint --fix --quiet"],
+    "src/**/*.{html,json,gql,graphql}": ["prettier --write --loglevel=error"]
   },
   "simple-git-hooks": {
     "pre-commit": ". ./lint-staged-each.sh"
-  },
-  "packageManager": "pnpm@8.7.5",
-  "engines": {
-    "npm": "use pnpm please!",
-    "yarn": "use pnpm please!",
-    "pnpm": ">=8.7.5"
   }
 }
