update clasp stuff , `.clasp.json`

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,45 +1,49 @@
 // For format details, see https://aka.ms/devcontainer.json. For config options, see the
 // README at: https://github.com/devcontainers/templates/tree/main/src/typescript-node
 {
-	"name": "Node.js & TypeScript",
-	// Or use a Dockerfile or Docker Compose file. More info: https://containers.dev/guide/dockerfile
-	"image": "mcr.microsoft.com/devcontainers/typescript-node:1-20-bullseye",
+  "name": "Node.js & TypeScript",
+  // Or use a Dockerfile or Docker Compose file. More info: https://containers.dev/guide/dockerfile
+  "dockerComposeFile": "./compose.yaml",
+  "service": "app",
+  // "image": "mcr.microsoft.com/devcontainers/typescript-node:1-20-bullseye",
+  "workspaceFolder": "/workspace",
 
-	"customizations": {
-		"vscode": {
-			"extensions": [
-				"christian-kohler.path-intellisense",
-				"dbaeumer.vscode-eslint",
-				"donjayamanne.githistory",
-				"esbenp.prettier-vscode",
-				"MariusAlchimavicius.json-to-ts",
-				"oderwat.indent-rainbow",
-				"stylelint.vscode-stylelint",
-				"VisualStudioExptTeam.vscodeintellicode",
-				"vscode-icons-team.vscode-icons",
-				"wix.vscode-import-cost",
-				"formulahendry.auto-rename-tag",
-				"johnpapa.vscode-peacock"
-			]
-		}
-	},
-	"features": {
-		"ghcr.io/devcontainers-contrib/features/pnpm:2": {},
-		"ghcr.io/shyim/devcontainers-features/bun:0": {}
-	},
+  "customizations": {
+    "vscode": {
+      "extensions": [
+        "christian-kohler.path-intellisense",
+        "donjayamanne.githistory",
+        "MariusAlchimavicius.json-to-ts",
+        "oderwat.indent-rainbow",
+        "stylelint.vscode-stylelint",
+        "VisualStudioExptTeam.vscodeintellicode",
+        "vscode-icons-team.vscode-icons",
+        "wix.vscode-import-cost",
+        "formulahendry.auto-rename-tag",
+        "johnpapa.vscode-peacock",
+        "biomejs.biome"
+      ]
+    }
+  },
+  "features": {
+    // "ghcr.io/devcontainers-contrib/features/pnpm:2": {},
+    // "ghcr.io/shyim/devcontainers-features/bun:0": {}
+    // "ghcr.io/prulloac/devcontainer-features/bun:1": {}
+    "ghcr.io/michidk/devcontainers-features/bun:1": {}
+  },
 
-	// Features to add to the dev container. More info: https://containers.dev/features.
-	// "features": {},
+  // Features to add to the dev container. More info: https://containers.dev/features.
+  // "features": {},
 
-	// Use 'forwardPorts' to make a list of ports inside the container available locally.
-	// "forwardPorts": [],
+  // Use 'forwardPorts' to make a list of ports inside the container available locally.
+  // "forwardPorts": [],
 
-	// Use 'postCreateCommand' to run commands after the container is created.
-	// "postCreateCommand": "yarn install",
+  // Use 'postCreateCommand' to run commands after the container is created.
+  // "postCreateCommand": "yarn install",
 
-	// Configure tool-specific properties.
-	// "customizations": {},
+  // Configure tool-specific properties.
+  // "customizations": {},
 
-	// Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
-	"remoteUser": "root"
+  // Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
+  "remoteUser": "root"
 }
