--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
   "scripts": {
     "dev": "vite --host",
     "format": "bunx @biomejs/biome format ./src --write",
-    "build": "tsc && vite build & pnpm run build:menu && node build.cjs",
-    "push": "cp appsscript.json dist && clasp push && rm -rf dist/*",
-    "build:menu": "tsc && vite build --emptyOutDir --config vite.config.menu.ts && find dist_menu -type f -name '*.html' -exec mv {} dist/ \\; && rm -rf dist_menu",
+    "build": "tsc && bunx vite build & bun build:menu && node build.cjs",
+    "push": "cp appsscript.json dist && bunx @google/clasp push && rm -rf dist/*",
+    "build:menu": "tsc && bunx vite build --emptyOutDir --config vite.config.menu.ts && find dist_menu -type f -name '*.html' -exec mv {} dist/ \\; && rm -rf dist_menu",
     "preview": "vite preview",
     "preinstall": "npx only-allow pnpm; npx typesync || :",
     "prepare": "npx simple-git-hooks || :"
@@ -29,12 +29,12 @@
   },
   "devDependencies": {
     "@chakra-ui/storybook-addon": "^5.1.0",
+    "@google/clasp": "^2.4.2",
     "@types/google-apps-script": "^1.0.83",
     "@types/lint-staged": "^13.3.0",
     "@types/react": "^18.3.2",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.2.1",
-    "clasp": "^1.0.0",
     "esbuild": "^0.21.3",
     "esbuild-gas-plugin": "^0.8.0",
     "jest": "^29.7.0",
@@ -51,9 +51,16 @@
     "vite-tsconfig-paths": "^4.3.2"
   },
   "lint-staged": {
-    "src/**/*.{js,jsx,ts,tsx}": ["prettier --write --loglevel=warn", "eslint --fix --quiet"],
-    "src/**/*.{css,less,sass,scss}": ["stylelint --fix --quiet"],
-    "src/**/*.{html,json,gql,graphql}": ["prettier --write --loglevel=error"]
+    "src/**/*.{js,jsx,ts,tsx}": [
+      "prettier --write --loglevel=warn",
+      "eslint --fix --quiet"
+    ],
+    "src/**/*.{css,less,sass,scss}": [
+      "stylelint --fix --quiet"
+    ],
+    "src/**/*.{html,json,gql,graphql}": [
+      "prettier --write --loglevel=error"
+    ]
   },
   "simple-git-hooks": {
     "pre-commit": ". ./lint-staged-each.sh"
