--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
     "target": "ESNext",
     "useDefineForClassFields": true,
     "lib": ["DOM", "DOM.Iterable", "ESNext"],
+    "experimentalDecorators": true,
     "allowJs": false,
     "skipLibCheck": true,
     "esModuleInterop": false,
