--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "push": "cp appsscript.json dist && bunx @google/clasp push && rm -rf dist/*",
     "build:menu": "tsc && bunx vite build --emptyOutDir --config vite.config.menu.ts && find dist_menu -type f -name '*.html' -exec mv {} dist/ \\; && rm -rf dist_menu",
     "preview": "vite preview",
-    "preinstall": "npx only-allow pnpm; npx typesync || :",
+    "preinstall": "npx only-allow bun; npx typesync || :",
     "prepare": "npx simple-git-hooks || :"
   },
   "dependencies": {
@@ -28,8 +28,7 @@
     "stylelint-config-recommended": "^14.0.0"
   },
   "devDependencies": {
-    "@chakra-ui/storybook-addon": "^5.1.0",
-    "@google/clasp": "^2.4.2",
+    "@biomejs/biome": "1.8.3",
     "@types/google-apps-script": "^1.0.83",
     "@types/lint-staged": "^13.3.0",
     "@types/react": "^18.3.2",
@@ -41,26 +40,10 @@
     "lint-staged": "^15.2.4",
     "npm-check-updates": "^16.14.20",
     "simple-git-hooks": "^2.11.1",
-    "stylelint": "^16.5.0",
-    "stylelint-config-recess-order": "^5.0.1",
-    "stylelint-config-standard": "^36.0.0",
-    "stylelint-order": "^6.0.4",
     "typescript": "5.4.5",
     "vite": "^5.2.11",
     "vite-plugin-singlefile": "^2.0.1",
     "vite-tsconfig-paths": "^4.3.2"
-  },
-  "lint-staged": {
-    "src/**/*.{js,jsx,ts,tsx}": [
-      "prettier --write --loglevel=warn",
-      "eslint --fix --quiet"
-    ],
-    "src/**/*.{css,less,sass,scss}": [
-      "stylelint --fix --quiet"
-    ],
-    "src/**/*.{html,json,gql,graphql}": [
-      "prettier --write --loglevel=error"
-    ]
   },
   "simple-git-hooks": {
     "pre-commit": ". ./lint-staged-each.sh"
