--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,3 +1,3 @@
-FROM mcr.microsoft.com/devcontainers/typescript-node:1-22-bullseye
+FROM mcr.microsoft.com/devcontainers/typescript-node:1-22-bookworm
 ENV PATH="/root/.bun/bin:${PATH}"
 WORKDIR /workspace
