modify biome setting for `@types/google-apps-script`

--- a/biome.json
+++ b/biome.json
@@ -10,7 +10,7 @@
       "correctness": {
         "noUnusedVariables": "error",
         "noUnsafeFinally": "error",
-        "noUndeclaredVariables": "error"
+        "noUndeclaredVariables": "info"
       }
     }
   },
