--- a/biome.json
+++ b/biome.json
@@ -1,5 +1,5 @@
 {
-  "$schema": "https://biomejs.dev/schemas/1.8.3/schema.json",
+  "$schema": "https://biomejs.dev/schemas/1.9.4/schema.json",
   "organizeImports": {
     "enabled": true
   },
@@ -11,7 +11,8 @@
         "noUnusedVariables": "error",
         "noUnsafeFinally": "error",
         "noUndeclaredVariables": "info"
-      }
+      },
+      "complexity": {}
     }
   },
   "formatter": {
