--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-error-boundary": "^6.0.0",
     "rollup": "^4.44.1",
     "stylelint-config-recommended": "^16.0.0",
+    "swr": "^2.3.3",
     "tailwindcss": "^4.1.11"
   },
   "devDependencies": {
