--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "esbuild-gas-plugin": "^0.9.0",
     "jest": "^30.0.3",
     "lint-staged": "^16.1.2",
+    "msw": "^2.10.2",
     "npm-check-updates": "^18.0.1",
     "simple-git-hooks": "^2.13.0",
     "typescript": "5.8.3",
